Use bower to manage front-end dependencies.

--- a/ntemplates/common/base.html
+++ b/ntemplates/common/base.html
@@ -9,18 +9,23 @@
     <link href='http://fonts.googleapis.com/css?family=Open+Sans&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
     <link href='http://fonts.googleapis.com/css?family=Noto+Sans&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
     {% compress css %}
-    <link rel="stylesheet" type="text/css" href="{% static "styles/bootstrap.min.css" %}"/>
-    <link rel="stylesheet" type="text/css" href="{% static "styles/base.css" %}"/>
+    <link rel="stylesheet" type="text/css" href="{% static 'libs/bootstrap/dist/css/bootstrap.css' %}"/>
+    <link rel="stylesheet" type="text/css" href="{% static 'styles/base.css' %}"/>
     {% endcompress %}
     {% block extra_css %}{% endblock %}
     {% block page_css %}{% endblock %}
-    <script type="text/javascript" src="http://code.jquery.com/jquery-2.1.0.min.js"></script>
+    {% compress js %}
+    <script type="text/javascript" src="{% static 'libs/jquery/dist/jquery.js' %}"></script>
+    <script type="text/javascript" src="{% static 'libs/underscore/underscore.js' %}"></script>
+    <script type="text/javascript" src="{% static 'libs/angular/angular.js' %}"></script>
+    <script type="text/javascript" src="{% static 'libs/angular-resource/angular-resource.js' %}"></script>
+    <script type="text/javascript" src="{% static 'libs/angular-bootstrap/ui-bootstrap.js' %}"></script>
+    <script type="text/javascript" src="{% static 'libs/angular-ui-router/release/angular-ui-router.js' %}"></script>
+    {% endcompress %}
+    <!-- Legacy dependencies -->
     <script type="text/javascript" src="http://code.jquery.com/ui/1.10.3/jquery-ui.js"></script>
-    <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.15/angular.js"></script>
-    <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.15/angular-resource.js"></script>
-    <script type="text/javascript" src="{% static "javascript/lib/bootstrap.min.js" %}"></script>
     <script type="text/javascript" src="{% static "javascript/lib/jquery.tmpl.min.js" %}"></script>
-    <script type="text/javascript" src="{% static "javascript/lib/underscore.min.js" %}"></script>
+    <script type="text/javascript" src="{% static "javascript/lib/bootstrap.min.js" %}"></script>
     <script type="text/javascript" src="{% static "javascript/lib/jquery.cookie.js" %}"></script>
     {% block extra_script %}{% endblock %}
   </head>
